Changes logic of connection to the database from MongoDb to Postgres - Pt. 2
