# docs/swagger.yaml
@@ -10,6 +10,8 @@ definitions:
         type: string
       genere:
         type: string
+      id:
+        type: integer
       id_copertina:
         type: string
       prezzo:
@@ -35,25 +37,22 @@ definitions:
     - summary
     - titolo
     type: object
-  responses.ResponseJSON:
+  responses.ResponseErrorJSON:
     properties:
-      data: {}
       message:
         type: string
       status:
         type: integer
     type: object
-host: 192.168.3.8:8080
+host: 192.168.3.8:8000
 info:
   contact:
     email: chrisd3v3l0p3r@gmail.com
     name: Chris Developer
-    url: http://www.swagger.io/support
   description: This API manage a cart
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
   title: Book Store API
   version: "1.0"
 paths:
@@ -75,11 +74,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/responses.ResponseJSON'
+            $ref: '#/definitions/models.Book'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.ResponseErrorJSON'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/responses.ResponseJSON'
+            $ref: '#/definitions/responses.ResponseErrorJSON'
       summary: Get a book
       tags:
       - Book
@@ -100,15 +103,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/responses.ResponseJSON'
+            $ref: '#/definitions/models.Book'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/responses.ResponseJSON'
+            $ref: '#/definitions/responses.ResponseErrorJSON'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/responses.ResponseJSON'
+            $ref: '#/definitions/responses.ResponseErrorJSON'
       summary: Get a book
       tags:
       - Book
