# routes/book_routes.go
@@ -16,7 +16,7 @@ func BookRoutes(r *gin.RouterGroup, db *sql.DB) {
 		book := v1.Group("/book")
 		{
 			// GET request
-			//book.GET("/:title", mongoClient.GetBook)
+			book.GET("/:title", sqlDb.GetBook)
 
 			// POST request
 			book.POST("/", sqlDb.PostBook)
